# game-engine

./: Cargo.toml  README.md  codecov.yml
.github/workflows/: rust.yml
examples/: labyrinth.rs  simple.rs
src/: engine.rs  events.rs  events_wrapper.rs  graphics_wrapper.rs  lib.rs  map.rs  object_generator.rs  painter.rs  point_generator.rs  polygon_generator.rs  render_thread.rs  test_utils.rs  wall_map.rs
src/generator/: mod.rs  object_generator.rs  point_generator.rs  polygon.rs  polygon_generator.rs
src/graph/: coordinate.rs  linear_graph.rs  mod.rs  rays.rs  rays_iterator.rs  wall.rs
src/map_element/: color.rs  colored_point.rs  door.rs  half_door.rs  map_element.rs  mod.rs  point.rs  rectangle.rs  wall_map.rs
src/player_utils/: angle.rs  mod.rs  move_handler.rs  player.rs  radians.rs
src/wrapper/: events_wrapper.rs  graphics_wrapper.rs  mod.rs  test_utils.rs
tests/: integration_test.rs
