[package]
name = "game-engine-3d"
version = "0.1.0"
authors = ["krisukox <krzysztofnaglik96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
piston_window = "0.83.0"
mockall = "0.8.2"
cfg-if = "1.0.0"

[dev-dependencies]
# mockall = "0.8.2"
# mockall = { path = "/home/krisukox/.cargo/registry/src/github.com-1ecc6299db9ec823/mockall-0.8.2" }
lazy_static = "1.4.0" 
