[package]
name = "game_engine_3d"
version = "0.1.0"
authors = ["krisukox <krzysztofnaglik96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
cfg-if = "1.0.0"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
mockall_double = "0.1.0"

[dev-dependencies]
mockall = "0.9.1"
lazy_static = "1.4.0"
float-cmp = "0.8.0"
